@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/11/28 v150 : </lime>
+</p><br/>
+<p>
+    1. 右键点击小地图的区域名字来切换小地图的自动渐隐效果。
+</p>
+<p>
+    2. 右键点击任务列表的头部来切换任务列表的自动渐隐效果。
+</p>
+<br/><br/>
+<p>
 <lime>2016/11/27 v145 : </lime>
 </p><br/>
 <p>
