@@ -7,6 +7,16 @@ L["ChangeLog"] = [[
 <html>
 <body>
 <p>
+<lime>2016/11/28 v150 : </lime>
+</p><br/>
+<p>
+    1. 右鍵點擊小地圖的區域名字來切換小地圖的自動漸隱效果。
+</p>
+<p>
+    2. 右鍵點擊任務列表的頭部來切換任務列表的自動漸隱效果。
+</p>
+<br/><br/>
+<p>
 <lime>2016/11/27 v145 : </lime>
 </p><br/>
 <p>
